5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_1054.log
== TEST (2019-04-09 10:29:23) 
-- CODE:
px=float(input())
py=float(input())

if(2*px+py==):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 4
    if(2*px+py==):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:29:34) 
-- CODE:
px=float(input())
py=float(input())

if(2*px+py==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:29:42) 
-- CODE:
px=float(input())
py=float(input())

if(2*px+py==3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.17872
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
